Fix measure filter text overflow in firefox

--- a/sonar-server/src/main/webapp/stylesheets/navigator.less
+++ b/sonar-server/src/main/webapp/stylesheets/navigator.less
@@ -190,7 +190,7 @@
     & > span {
       display: inline-block;
       vertical-align: top;
-      width: 90%;
+      width: 86%;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
